Fixed background color for content overflow

--- a/client/main.css
+++ b/client/main.css
@@ -13,6 +13,7 @@ body {
 #render-target {
   background-color: #333;
   height: 100%;
+  overflow: auto;
 }
 
 #navLinksContainer, #exploreContainer, #blogContainer, #newPostContainer {
